--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ TypeRacer/.vs/TypeRacer/v15/sqlite3/storage.ide-shm
 TypeRacer/.vs/TypeRacer/v15/sqlite3/storage.ide-wal
 TypeRacer/.vs/TypeRacer/v15/sqlite3/storage.ide
 TypeRacer/.vs/TypeRacer/v15/.suo
+TypeRacer/.vs/TypeRacer/v15/.suo
+TypeRacer/.vs/TypeRacer/v15/.suo
